--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="right">
     <img src="profile.png" alt="display picture">
     <h2>Kanth</h2>
-    <button type="button" name="button">dynamic resume</button>
+    <button onclick="window.location='dynamic.html'">dynamic resume</button>
   </div>
 
 </div>
